--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             const enrollment = document.getElementById('selectEnroll').value;
             const links = {
                 "220200107127": "gturesult.html",
-                "220200107128": "link_for_220200107128.html",
+                "220170111066": "220170111066.html",
                 "220200107129": "link_for_220200107129.html"
                 // Add more enrollment numbers and their links here
             };
@@ -63,7 +63,7 @@
                                         <td>
                                             <select id="selectEnroll" class="csstext">
                                                 <option value="220200107127">220200107127</option>
-                                                <option value="220200107128">220200107128</option>
+                                                <option value="220170111066">220170111066</option>
                                                 <option value="220200107129">220200107129</option>
                                                 <!-- Add more options here -->
                                             </select>
